--- a/comm/src/main/res/layout/comm_mvrx_item_nomore.xml
+++ b/comm/src/main/res/layout/comm_mvrx_item_nomore.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="@string/noMoreTips"
+        android:text="@string/comm_noMoreTips"
         android:textColor="#FF999999"
         android:textSize="12sp" />
 
