--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,18 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="colorAccent">@color/black</item>
+        <item name="android:statusBarColor">@android:color/white</item>
+        <item name="android:splitMotionEvents">false</item>
+        <!--  背景色  -->
+        <item name="android:windowBackground">@color/white</item>
+        <!--  光标等控件的选中状态颜色  -->
+        <item name="android:colorControlActivated">#30D18B</item>
+        <!--  设置无标题  -->
+        <item name="windowNoTitle">true</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
 
 </resources>
