--- a/comm/src/main/res/layout/comm_activity_title.xml
+++ b/comm/src/main/res/layout/comm_activity_title.xml
@@ -6,7 +6,7 @@
 
     <include
         android:id="@+id/titleBar"
-        layout="@layout/layout_title" />
+        layout="@layout/comm_layout_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
