--- a/comm/src/main/res/layout/comm_dialog_loading.xml
+++ b/comm/src/main/res/layout/comm_dialog_loading.xml
@@ -10,6 +10,8 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieView"
+        android:background="@drawable/shape_slide_corners_8dp"
+        android:backgroundTint="#11330000"
         android:layout_width="80dp"
         android:layout_height="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
