--- a/comm/src/main/res/values/colors.xml
+++ b/comm/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
 
     <!--  黑色  -->
     <color name="black">#000000</color>
@@ -19,6 +19,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="itemLineBgColor">#FFEBEBEB</color>
 
 
 </resources>
