--- a/comm/src/main/res/layout/comm_mvrx_item_line.xml
+++ b/comm/src/main/res/layout/comm_mvrx_item_line.xml
@@ -3,4 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1px"
-    android:background="#FFEBEBEB" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#FFEBEBEB"
+    tools:viewBindingIgnore="true" />
