--- a/comm/src/main/res/layout/comm_mvrx_item_loadmore.xml
+++ b/comm/src/main/res/layout/comm_mvrx_item_loadmore.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
+    tools:viewBindingIgnore="true"
     android:orientation="horizontal">
 
     <ProgressBar
